--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
 	<h1>Alex Hofmann</h1>
-	<h4>Programmer who truly believes you can predict the future with data.</h4>
+	<h4>Programmer who truly believes that one can predict the future with data.</h4>
 
 	<div></div>
 
